--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,14 @@ body,
     height: 100%;
     margin: 0;
 }
+section {
+    width: 700px;
+    height: 400px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto 200px auto;
+}
+div {
+    background: #daa520;
+}
